# ecommerce-microservices

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml
catalog/: .dockerignore  .env.example  Dockerfile  pyproject.toml
catalog/main/: settings.py  urls.py
catalog/products/: HEALTH_CHECK_README.md  SAGA_README.md  health_views.py  models.py  saga_urls.py  saga_views.py  serializers.py  services.py  test_api.py  test_models.py  tests.py  urls.py  views.py
catalog/tests/: README.md  test_api.py  test_models.py
inventory/: .env.example  .gitignore  Dockerfile  pyproject.toml  test_api.py
inventory/config/: asgi.py  settings.py  urls.py  wsgi.py
inventory/inventory/: admin.py  models.py  serializers.py  services.py  tests.py  urls.py  views.py
orchestrator/: .dockerignore  .env.example  Dockerfile  pyproject.toml
orchestrator/app/: __init__.py  config.py  main.py  models.py
orchestrator/app/routes/: __init__.py  saga_routes.py
orchestrator/app/services/: __init__.py  compensation.py  http_client.py  saga_service.py
orchestrator/app/storage/: __init__.py  transaction_store.py
orchestrator/tests/: test_saga.py
payments/: .env.example  Dockerfile  README.md  pyproject.toml
payments/app/: admin.py  (+5 more)
purchases/: .dockerignore  .env.example  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
purchases/app/: __init__.py  admin.py  apps.py  tests.py  urls.py
purchases/app/models/: __init__.py  purchase.py
purchases/app/repositories/: __init__.py  purchase_repository.py
purchases/app/serializers/: __init__.py  purchase_serializer.py
purchases/app/services/: __init__.py  purchase_service.py
purchases/app/tests/: conftest.py  test_models.py  test_repository.py  test_serializers.py  test_service.py  test_views.py
purchases/app/views/: __init__.py  health_view.py  purchase_view.py
purchases/main/: settings.py  urls.py
scripts/: clean.sh  init-db.sql
(+19 files in other folders)
